<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/prime"
    android:orientation="vertical"
    tools:context=".StartActivity">
    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="260sp"
        android:layout_height="260sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50sp"
        android:background="@mipmap/main_logo_big"
        android:contentDescription="@string/app_name" />
    <TextView
        android:id="@+id/changecity_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="10sp"
        android:fontFamily="monospace"
        android:text="@string/changecity"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/grey"
        android:textSize="30sp" />
    <LinearLayout
        android:layout_width="400sp"
        android:layout_height="250sp"
        android:layout_gravity = "center"
        android:gravity="center">

        <!-- First Column -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/buttonBrovary"
                android:layout_width="150sp"
                android:layout_height="60sp"
                android:layout_margin="10sp"
                android:background="@drawable/button_selector"
                android:fontFamily="@font/aclonica"
                android:text="@string/Brovary"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />
            <Button
                android:id="@+id/buttonVyshneve"
                android:layout_width="150sp"
                android:layout_height="60sp"
                android:layout_margin="10sp"
                android:background="@drawable/button_selector"
                android:fontFamily="@font/aclonica"
                android:text="@string/Vyshneve"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />
            <Button
                android:id="@+id/buttonKhmelnytskyi"
                android:layout_width="150sp"
                android:layout_height="60sp"
                android:layout_margin="10sp"
                android:background="@drawable/button_selector"
                android:fontFamily="@font/aclonica"
                android:text="@string/Khmelnytskyi"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />
        </LinearLayout>

        <!-- Second Column -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/buttonBorispol"
                android:layout_width="150sp"
                android:layout_height="60sp"
                android:layout_margin="10sp"
                android:background="@drawable/button_selector"
                android:fontFamily="@font/aclonica"
                android:text="@string/borispol"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <Button
                android:id="@+id/buttonKyiv"
                android:layout_width="150sp"
                android:layout_height="60sp"
                android:layout_margin="10sp"
                android:background="@drawable/button_selector"
                android:fontFamily="@font/aclonica"
                android:text="@string/Kyiv"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />
            <Button
                android:id="@+id/buttonSoon"
                android:clickable="false"
                android:layout_width="150sp"
                android:layout_height="60sp"
                android:layout_margin="10sp"
                android:background="@drawable/button_selector"
                android:fontFamily="@font/aclonica"
                android:text="Незабаром відкриття :)"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonOurSite"
        android:layout_width="320sp"
        android:layout_height="60sp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="30sp"
        android:background="@drawable/site_button_selector"
        android:fontFamily="@font/aclonica"
        android:text="@string/site"
        android:textSize="25sp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black" />

</LinearLayout>
