<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/backgroundLayout"
    android:background="@color/prime">
    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <LinearLayout
        android:id="@+id/chek_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20sp"
        android:orientation="vertical"
        android:visibility="gone" >
        <TextView
            android:id="@+id/connectionLabel1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/grey"
            android:fontFamily="monospace"
            android:text="@string/no_internet_connection1"
            android:textSize="20sp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
            android:id="@+id/connectionLabel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/grey"
            android:fontFamily="monospace"
            android:text="@string/no_internet_connection2"
            android:textSize="20sp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <Button
            android:id="@+id/networkSettingsButton"
            android:layout_width="200sp"
            android:layout_height="100sp"
            android:background="@drawable/button_selector"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="50sp"
            android:layout_marginBottom="150sp"
            android:text="@string/open_network_settings"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp"
            android:textColor="@color/black" />
    </LinearLayout>

    <Button
        android:id="@+id/goToMainButton"
        android:text="@string/go_to_main"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:layout_margin="30sp"
        android:layout_gravity="center"
        android:background="@drawable/site_button_selector"
        android:fontFamily="@font/aclonica"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:visibility="gone" />
</FrameLayout>
